<resources>
    <string name="app_name">Tutoria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name ="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name ="welcome_to_tutoria">WELCOME TO TUTORIA</string>
    <string name="create_an_account">Create an account</string>
    <string name="select_role">Select Role:</string>
    <string name="lecturer">Lecturer</string>
    <string name="student">Student</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user">Already an user? Login</string>
    <string name="login_to_account">Login to an account</string>
    <string name="login">Login</string>
    <string name="not_yet_registered">Not yet registered? SignUp</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgotten_password">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="chats">Chats</string>
    <string name="contact_name">Contact Name</string>
    <string name="last_message">Last message</string>
    <string name="time_recent_chat">12:45 PM</string>
    <string name="tutoria">Tutoria</string>
   <string name="tutoria_chat">Tutoria Chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">send</string>
    <string name="the_layout">The layout</string>
    <string name="back_button">back button</string>
    <string name="profile_image">Profile image</string>
    <string name="more_options">More options</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_otp">Verify your account using the password sent</string>
    <string name="on_this_mobile_number">on your email</string>
    <string name="otp">Enter your OTP</string>
    <string name="profile_information">Profile Information</string>
    <string name="please_setup_profile">Please setup your profile</string>
<string name="first_name">Fist Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth (YYYY-MM-DD)</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="education_level">Education Level</string>
    <string name="subjects_of_interest">Subjects of Interest</string>
    <string name="learning_goals">Learning Goals</string>
    <string name="qualifications">Qualifications</string>
    <string name="subjects_taught">Subjects Taught</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="biography">Biography</string>
    <string name="save_profile">Save Profile</string>
    <string name="name">Name</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_review">my review</string>
    <string name="my_reviews">My Reviews</string>
    <string name="personal_information">Personal Information</string>
    <string name="notification">Notification</string>
</resources>