<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutoria"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/g_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="8dp" />

    <!-- Chat Item Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_person_24"
            android:scaleType="centerCrop"
            android:layout_marginEnd="8dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contactNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:fontFamily="@font/opensans_semibold"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/lastMessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_message"
                android:fontFamily="@font/opensans"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/timestampTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_recent_chat"
            android:fontFamily="@font/opensans"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>
